Revert the Code

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   nb_utils: ^4.5.2
   get: ^4.6.3
   http: ^0.13.4
+  cached_network_image: ^3.2.1
 
 dev_dependencies:
   flutter_test:
